bin/testsuite/tests/compiler/src/errors/compiler3148.swg
#global testerror "Err0527"
/*func toto(x: cvarargs)
{
}*/

#test
{
    var x: #code void
    //toto(6)
}
